--- a/static/styles.css
+++ b/static/styles.css
@@ -61,7 +61,7 @@ a:hover {
 
 .home-banner {
     background-image: url('https://images.metmuseum.org/CRDImages/ad/original/DP316875.jpg');
-    background-size:cover;
+    background-size: cover;
     width: 100%;
     height: 20vh;
     padding: .5% 20%;
@@ -183,7 +183,7 @@ a:hover {
 }
 
 .form {
-    margin: 5% 5% 5% 30%;
+    margin: 15% 5% 5% 5%;
 }
 
 .form-item {
@@ -205,11 +205,12 @@ a:hover {
     height: 100%;
     flex-direction: column;
     justify-content: center;
+    margin: 5% 0% 0% 30%;
 }
 
 .window-item {
-    width: 400px;
-    height: 400px;
+    width: 450px;
+    height: 450px;
 }
 
 .preview-container {
@@ -217,40 +218,44 @@ a:hover {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    width: 400px;
-    height: 400px;
+    width: 450px;
+    height: 450px;
 }
 
 .twoBy {
     width: 48%;
     height: 48%;
-    border-radius: 2%;
+    border-radius: 3%;
     border: 1px solid lightgrey;
-    overflow: hidden;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .threeBy {
     width: 31%;
     height: 31%;
-    border-radius: 2%;
+    border-radius: 4%;
     border: 1px solid lightgrey;
-    overflow: hidden;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .fourBy {
     width: 23%;
     height: 23%;
-    border-radius: 2%;
+    border-radius: 5%;
     border: 1px solid lightgrey;
-    overflow: hidden;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .fiveBy {
     width: 18%;
     height: 18%;
-    border-radius: 3%;
+    border-radius: 6%;
     border: 1px solid lightgrey;
-    overflow: hidden;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 /*END SETTINGS PAGE*************************************************************/
