--- a/templates/layout.html
+++ b/templates/layout.html
@@ -68,6 +68,11 @@
 
         {% endblock %}
         </main>
+
+        <div class="unzoom" id="zoomable" onclick="unzoom();">
+            <img class="unzoom-img" id="zoomable-img">
+        </div>
+
         <footer>
             <div class="text-center p-3 footer" style="background-color: rgba(0, 0, 0, 0.2);">
                 <p class="text-dark">Made by Rachel Gilyard for CS50x</p>
