--- a/templates/results.html
+++ b/templates/results.html
@@ -47,7 +47,7 @@
                     {% endif %}
                 {% endif %}
                     <div class="result-content-wrapper">
-                        <img class="img" src="{{ keyRows[i]["image"] }}" style="max-height: {{ width * 7 }}px;">
+                        <img class="img" src="{{ keyRows[i]["image"] }}" style="max-height: {{ width * 7 }}px;" onclick="zoom(event);">
                     </div>
 
 
