Add youtube link to readme

--- a/templates/register.html
+++ b/templates/register.html
@@ -28,5 +28,9 @@
         </div>
     </form>
 </div>
+<div class="disclaimer text-center">
+    <p>This site is not secure. Please do not submit any personal information. <!--"Logged in" features
+    not yet available on heroku app because of the way sessions are handled.--></p>
+</div>
 
 {% endblock %}
