--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -14,16 +14,16 @@
         <img src="/static/images/headshot.jpg" class="index-pic" alt="Headshot of Rachel Gilyard">
         <div class="index-description-right">
             <p>Rachel Gilyard is mere days away from finally earning her CS50 certificate!
-            It has her over a year to get here, partly because she was busy
+            It has taken her over a year to get here, partly because she was busy
             going back to school and finishing her undergraduate degree (a decision that was inspired by this class).
             She's excited to start applying for CS Master's programs after the fall semester.</p>
 
             <p>This class has been challenging and incredibly fun, and she never misses an opportunity to
-            recommend it to people. The certificate has earned a prominent place on the wall right next to
+            recommend it to people. The certificate will be placed on the wall right next to
             her shiny new diploma.</p>
 
-            <p>Thank you everyone the CS50x team, and to Harvard for making this class available to
-            for free!</p>
+            <p>Thank you everyone the CS50x team, and to Harvard, for making this class available to
+            everyone for free! You are all truly amazing.</p>
         </div>
     </div>
 </div>
